unpackaged/main/default/objects/Forecast_Setting__mdt/Forecast_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Forecast Setting</label>
    <pluralLabel>Forecast Settings</pluralLabel>
</CustomObject>