unpackaged/main/default/objects/Forecast_Setting__mdt/fields/Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Factor__c</fullName>
    <label>Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>