unpackaged/main/default/objects/Forecast_Setting__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENT</fullName>
                <default>true</default>
                <label>ENT</label>
            </value>
            <value>
                <fullName>MMK</fullName>
            </value>
            <value>
                <fullName>GRW</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>STR</fullName>
            </value>
            <value>
                <fullName>EDU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>