unpackaged/main/default/objects/Forecast_Setting__mdt/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal - Annual</fullName>
                <default>true</default>
                <label>Renewal - Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>