unpackaged/main/default/objects/Forecast_Setting__mdt/listViews/Forecast_Setting_View.listView-meta.xml
<ListView>
    <fullName>Forecast_Setting_View</fullName>
    <columns>Segment__c</columns>
    <columns>Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>Adjustment_Factor__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Forecast Setting View</label>
    <language>en_US</language>
</ListView>